# genevo

./: .editorconfig  .gitignore  .travis.yml  CHANGELOG.md  COPYRIGHT.txt  Cargo.toml  README.md  appveyor.yml  dep-graph.bat  rustfmt.toml
benches/: genome_builder.rs  index_of_value_in_vector.rs  population_builder.rs
examples/knapsack/: main.rs
examples/monkeys/: main.rs
examples/queens/: main.rs
src/: algorithm.rs  encoding.rs  genetic.rs  lib.rs  math.rs  operator.rs  population.rs  prelude.rs  random.rs  statistic.rs  types.rs
src/fixer/: mod.rs
src/ga/: builder.rs  mod.rs
src/mutation/: mod.rs  order.rs  value.rs
src/operator/: mod.rs  prelude.rs
src/population/: mod.rs  tests.rs
src/random/: mod.rs  tests.rs
src/recombination/: discrete.rs  mod.rs  order.rs
src/reinsertion/: elitist.rs  mod.rs  random.rs
src/selection/: mod.rs  proportional.rs  proportionate.rs  tournament.rs  truncation.rs
src/simulation/: ga.rs  mod.rs  simulator.rs
src/statistic/: mod.rs  tests.rs
src/termination/: combinator.rs  limit.rs  limiter.rs  mod.rs
src/types/: fmt.rs  fmt_tests.rs  mod.rs  tests.rs
src/types/fmt/: mod.rs  tests.rs
tests/: algorithm_builder.rs  api_design.rs  population_builder.rs
