[package]
name = "genevo"
version = "0.2.0"
authors = ["haraldmaida"]
license = "MIT/Apache-2.0"
description = """
genevo provides building blocks to run simulations of optimization and search problems using
genetic algorithms (GA).

Execute genetic algorithm (GA) simulations in a customizable and extensible way.
"""
keywords = ["genetic", "evolutionary", "algorithm"]
repository = "https://github.com/innoave/genevo"
documentation = "https://docs.rs/genevo"
#homepage = "https://innoave.github.io/genevo"
readme = "README.md"

edition = "2018"

[dependencies]
chrono = "0.4"
log = "0.4"
rand = "0.6"
rand_xoshiro = "0.2"
rayon = "1.0"
fixedbitset = { version = "0.1", optional = true }
smallvec = { version = "0.6", optional = true }

[dev-dependencies]
criterion = { version = "0.2", default-features = false }
galvanic-assert = "0.8"
proptest = "0.9"
version-sync = "0.8"

[lib]
bench = false

[[bench]]
name = "index_of_value_in_vector"
harness = false

[[bench]]
name = "genome_builder"
harness = false

[[example]]
name = "knapsack"
path = "examples/knapsack/main.rs"
required-features = [ "smallvec" ]

[[example]]
name = "monkeys"
path = "examples/monkeys/main.rs"

[[example]]
name = "queens"
path = "examples/queens/main.rs"
